# tinylog

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  types.ts  utils.ts
frontend/src/components/: Layout.tsx  LoginGate.tsx  MarkdownContent.tsx  SessionDrawer.tsx  StatCard.tsx
frontend/src/hooks/: useTheme.ts
frontend/src/pages/: DashboardPage.tsx  FilesPage.tsx  SessionsPage.tsx
frontend/src/services/: api.ts
frontend/src/styles/: index.css
tests/: conftest.py  create_fixtures.py  test_agno_source.py  test_api.py  test_detect.py  test_sources.py
tests/fixtures/claude-sdk/test-project/: sdk-session-1.jsonl
tests/fixtures/json-import/: session-1.json
tinylog/: __init__.py  __main__.py  app.py  cli.py  config.py  db.py
tinylog/api/: auth.py  files.py  sessions.py  statistics.py
tinylog/sources/: __init__.py  adk.py  agno.py  autogen.py  base.py  claude_sdk.py  detect.py  json_import.py  langchain.py  utils.py
